--- a/public/TODO.txt
+++ b/public/TODO.txt
@@ -1,2 +1,3 @@
 TODO: !!! Change from boilerplate - remove unused image
 TODO: !!! Change from boilerplate - change favicon
+TODO: !!! Use webp not pngs
