--- a/components/TODO.txt
+++ b/components/TODO.txt
@@ -1,3 +1,2 @@
-TODO: !!! What is the best place to put components in
-TODO: !!! What is the best way how to make looooookg single page with hash-routed sections 
-TODO: !!! Expose in terminals
+TODO: [🧠] What is the best place to put components in?
+TODO: [🧠] What is the best way how to make looooookg single page with hash-routed sections?
