--- a/wallpapers/TODO.txt
+++ b/wallpapers/TODO.txt
@@ -1,2 +1,4 @@
 TODO: Upscale to max in main wallpaper BUT probbaby in every wallpaper
 TODO: [🧠] Where is the best place to be index.tsx as a library of the images
+TODO: [😴] Is it a good practise to place components in the public folder?
+TODO: [👣] But here reloading works
