--- a/projects/TODO.txt
+++ b/projects/TODO.txt
@@ -1,3 +1,4 @@
+TODO: MJ images should be as original name
 TODO: Get images of original quality (as png)
 TODO: Move some of the images to the ../hackings folder
 TODO: collboard-geography-2.jpeg has ugly horizonal line
