--- a/src/sections/TODO.txt
+++ b/src/sections/TODO.txt
@@ -1,2 +1,3 @@
+TODO: !!! Prefix sections by numbers
 TODO: [🧠] What is the best place to put components in?
 TODO: [🧠] What is the best way how to make looooookg single page with hash-routed sections?
