Using markdown articles

--- a/locales/cs/pavolhejny.json
+++ b/locales/cs/pavolhejny.json
@@ -1,3 +1,4 @@
 {
-    "who i am": "Who I am?"
+    "title": "Who I am?",
+    "content": "!!! Better translated!!! Jsem Pavol, vývojář a technologický nadšenec, který s nadšením zkoumá nejmodernější nástroje a technologie. Jako spoluzakladatel společností H-edu a Collboard investuji do využívání digitálních inovací k transformaci vzdělávání. Vyvinul jsem několik projektů občanské vědy, včetně první mobilní aplikace pro pozorovatele ptáků v České republice, a přednášel na technologických a startupových konferencích na témata jako VR, AR a AI. Vedu také platformu Czech.events, která pomáhá lidem vyhledávat a navštěvovat technologické a inovační akce. Můj talent pro vyhledávání příležitostí k růstu a mentoring startupů mě přivedl k vítězství v několika inovačních soutěžích. Snažím se inspirovat ostatní a věřím, že technologie mohou pomoci řešit problémy světa."
 }
