--- a/locales/cs/footer.json
+++ b/locales/cs/footer.json
@@ -1,5 +1,6 @@
 {
     "home": "Úvod",
     "gallery": "Galerie",
-    "contact": "Kontakt"
+    "contact": "Kontakt",
+    "technical details": "Technické detaily"
 }
