--- a/locales/en/footer.json
+++ b/locales/en/footer.json
@@ -1,5 +1,6 @@
 {
     "home": "Home",
     "gallery": "Gallery",
-    "contact": "Contact"
+    "contact": "Contact",
+    "technical details": "Technical details"
 }
