Link to commit in technical details

--- a/public/projects/TODO.txt
+++ b/public/projects/TODO.txt
@@ -1,4 +1,4 @@
-TODO: !!! Unite outline style of the projects
+TODO: Remove double-lined style from some projects like czech.events, collboard or towns
 TODO: Rename all outline.svg to original names
 TODO: [😴] Is it a good practise to place components in the public folder?
 TODO: [👣] Why is here broken hot-reload and you need to restart next dev to reload
