--- a/locales/en/welcome.json
+++ b/locales/en/welcome.json
@@ -1,1 +1,4 @@
-{}
+{
+    "content": "Virtual Reality (VR), Augmented Reality (AR), Extended Reality (XR), GraphQL Progressive Web Apps (PWA), Single-page Apps (SPA), Artificial Intelligence (AI), Machine Learning (ML), Blockchain, Smart contracts, Web3, Chatbots… 🤯\n\nAre you realising the **full potential of technology in your business?**\n\nWith the ever-evolving landscape of **exponential Technologies**, it can be challenging to keep up to date and use it to its potential in your business. However, by incorporating cutting-edge tools such as advanced browser APIs, Web Assembly (WASM), using TypeScript, and benefiting from GPT when writing code, you can code, you can differentiate your business and achieve new levels of efficiency, innovation and customer engagement. 🚀",
+    "back-home": "Back home"
+}
