Working on translating of each section

--- a/locales/en/welcome.yml
+++ b/locales/en/welcome.yml
@@ -14,3 +14,4 @@ content: >
     you can differentiate your business and achieve new levels of efficiency, innovation and customer engagement. 🚀
 
 back-home: Back home
+# TODO: !!! Do acronyms better
