Working on translating of MyProjectsSection and HackingSection

--- a/locales/en/hacking.yml
+++ b/locales/en/hacking.yml
@@ -1,1 +1,5 @@
 title: Hacking!
+content: >
+    These are some hackathon undertakings and proof of concept initiatives I have been involved in.
+
+    Case studies what could be **done in 24/48 hours**
