--- a/locales/en/projects.yml
+++ b/locales/en/projects.yml
@@ -1,1 +1,5 @@
-{ title: What have I worked on? }
+title: What have I worked on?
+content: >
+    Here are some of the larger projects that I have been involved in:
+
+all-projects: See all my projects
