Translate to cs and en (automated)

--- a/locales/en/welcome.yml
+++ b/locales/en/welcome.yml
@@ -1,6 +1,6 @@
 content: >
     Virtual Reality *(VR)*, Augmented Reality *(AR)*, Extended Reality *(XR)*,
-    GraphQL Progressive Web Apps *(PWA)*, Single-page Apps *(SPA)*, 
+    GraphQL, Progressive Web Apps *(PWA)*, Single-page Apps *(SPA)*, 
     Artificial Intelligence *(AI)*, Machine Learning *(ML)*, Blockchain, Smart contracts, Web3, Chatbots… 🤯
 
 
