--- a/locales/cs/pavolhejny.yml
+++ b/locales/cs/pavolhejny.yml
@@ -9,4 +9,4 @@ content: >
     Můj talent pro vyhledávání příležitostí k růstu a mentoring startupů mě přivedl k vítězství v několika inovačních soutěžích.
     Snažím se inspirovat ostatní a věřím, že technologie mohou pomoci řešit problémy světa.
 
-# TODO: !!! Better cs translation
+# TODO: !!! Better translation for cs
