--- a/locales/cs/welcome.yml
+++ b/locales/cs/welcome.yml
@@ -12,7 +12,7 @@ content: >
     TypeScript a využití výhod GPT při psaní kódu, můžete kódovat,
     můžete odlišit své podnikání a dosáhnout nové úrovně efektivity, inovací a zapojení zákazníků. 🚀
 
-# TODO: !!! Better cs translation
+# TODO: !!! Better translation for cs
 
 back-home: Zpět na hlavní stránku
 # TODO: !!! Do acronyms better
