--- a/locales/cs/pavolhejny.yml
+++ b/locales/cs/pavolhejny.yml
@@ -1,4 +1,4 @@
-title: Kdo jsem
+title: Kdo jsem?
 content: >
     Jsem Pavol, vývojář a technologický nadšenec, který s nadšením zkoumá nejmodernější nástroje a technologie.
     Jako spoluzakladatel [H-edu](https://www.h-edu.cz/) a [Collboard](https://collboard.com/),
