Main call-to-action button

--- a/locales/cs/services.yml
+++ b/locales/cs/services.yml
@@ -1,4 +1,4 @@
-title: V čem dokážu pomoct
+title: Jak dokážu pomoci?
 content: >
     Specializuji se na vytváření **plně funkčních prototypů** od nuly až po ověření konceptu, přičemž zůstávám u
     před nejnovějšími technologiemi. Dovolte mi, abych vás provedl neustále se měnícím prostředím nových, vznikajících technologií.
@@ -32,3 +32,10 @@ prototype:
         od konceptu k realizaci.
 
 # TODO: !!! Better translation for cs
+
+action: Spojme se 🚀
+# TODO: !!! Better translation for cs
+
+# TODO: Some cool effect after clicking on [ Spojme se 🚀 ]
+# TODO: Replace emojis 🚀 on page with own pictures
+
