--- a/locales/en/services.yml
+++ b/locales/en/services.yml
@@ -21,3 +21,5 @@ prototype:
     content: >
         I will bring your new project into the reality through effective prototyping and seamless
         transition from concept to implementation.
+
+action: Get in touch 🚀
