--- a/locales/cs/pavolhejny.yml
+++ b/locales/cs/pavolhejny.yml
@@ -1,12 +1,3 @@
 title: Kdo jsem?
 content: >
-    Jsem Pavol, vývojář a technologický nadšenec, který s nadšením zkoumá nejmodernější nástroje a technologie.
-    Jako spoluzakladatel H-edu a Collboard,
-    investuji do využívání digitálních inovací k transformaci vzdělávání.
-    Vyvinul jsem několik projektů občanské vědy, včetně první mobilní aplikace pro pozorovatele ptáků v České republice,
-    a přednášel jsem na technologických a startupových konferencích na témata jako VR, AR a AI. Vedu také Czech.events,
-    platformu, která pomáhá lidem vyhledávat a navštěvovat technologické a inovační akce.
-    Můj talent pro vyhledávání příležitostí k růstu a mentoring startupů mě přivedl k vítězství v několika inovačních soutěžích.
-    Snažím se inspirovat ostatní a věřím, že technologie mohou pomoci řešit problémy světa.
-
-# TODO: !!! Better translation for cs
+    Jsem Pavol, vývojář, který s nadšením využívá nové nástroje a technologie. Spoluzaložil jsem virtuální tabuli Collboard  a elektronické učebnice H-edu. Pracoval jsem na mnoha projektech České společnosti ornitologické. Přednášel jsem na mnoha technologických a startupových konferencích + byl v porotě a mentorem mnoha soutěží - například Startup Weekendu. Také pracuji na Czech.events, newsletteru s nejzajímavějšími technologickými a startup událostmi v Čechách.
