--- a/locales/cs/services.yml
+++ b/locales/cs/services.yml
@@ -1,40 +1,25 @@
-title: Jak dokážu pomoci?
+title: Jak Vám pomohu?
 content: >
-    Specializuji se na vytváření **plně funkčních prototypů** od nuly až po ověření konceptu, přičemž zůstávám u
-    před nejnovějšími technologiemi. Dovolte mi, abych vás provedl neustále se měnícím prostředím nových, vznikajících technologií.
-    a převratných technologií.
-
-# TODO: !!! Better translation for cs
 
 consult:
-    title: Koznultace
+    title: Konzultace
     content: >
-        I offer expert advice on various technologies, providing <!-- insightful --> analysis of their
-        benefits and limitations to help you make decisions.
-
-# TODO: !!! Better translation for cs
+        Nabízím odborné poradenství v oblasti různých technologií a poskytuji analýzu jejich výhod a omezení, která vám pomůže při rozhodování.
 
 talk:
     title: Přednáška
     content: >
-        Poskytnu přehled různých technologií a zdůrazňuji jejich
-        <span style="color: #11ff11">výhody</span>
-        a
-        <span style="color: #ff0000">nevýhody</span>
-        , abych zajistil jejich komplexní pochopení.
-
-# TODO: !!! Better translation for cs
+        Poskytnu přehled různých technologií a přístupů s přihlédnutím na jejich
+        <span style="color: #11ff11">výhody</span> a
+        <span style="color: #ff0000">nevýhody</span>.
 
 prototype:
     title: Prototypování
     content: >
-        Váš nový projekt uvedu do reality prostřednictvím efektivního prototypování a bezproblémového fungování.
-        od konceptu k realizaci.
-
-# TODO: !!! Better translation for cs
+        Specializuji se na tvorbu **plně funkčních prototypů** od nuly až po ověření konceptu.
 
 action: Spojme se 🚀
-# TODO: !!! Better translation for cs
+# TODO: !! Better translation for cs
 
 # TODO: Some cool effect after clicking on [ Spojme se 🚀 ]
 # TODO: Replace emojis 🚀 on page with own pictures
