--- a/locales/cs/welcome.yml
+++ b/locales/cs/welcome.yml
@@ -1,19 +1,12 @@
 content: >
-    Virtuální realita *(VR)*, rozšířená realita *(AR/XR)*, GraphQL
-    Progressive Web Apps *(PWA)*, Single-page Apps *(SPA)*, 
-    Umělá inteligence *(AI)*, Strojové učení *(ML)*, Blockchain, Smart kontrakty, Web3, Chatboti... 🤯
+    VR/AR/XR, GraphQL, Progressive Web Apps, AI, ML, Blockchain, Web3,... 🤯
 
 
     Využíváte **plný potenciál technologií ve Vašem podnikání?**
 
 
-    S neustále se vyvíjejícím prostředím **exponenciálních technologií**,
-    může být náročné udržet krok s dobou a využít jejich potenciál ve vašem podnikání.
-    Začleněním nejmodernějších nástrojů, jako jsou pokročilá rozhraní API prohlížeče, Web Assembly *(WASM)*,
-    TypeScript a využití výhod GPT při psaní kódu, můžete kódovat,
-    můžete odlišit své podnikání a dosáhnout nové úrovně efektivity, inovací a zapojení zákazníků. 🚀
-
-# TODO: !!! Better translation for cs
+    Technologie se neustále vyvíjejí a může být náročné udržet krok s dobou a plně využívat jejich potenciál.
+    S tím Vám rád pomohu.
 
 back-home: Zpět na hlavní stránku
 # TODO: !!! Do acronyms better
