--- a/locales/cs/common.yml
+++ b/locales/cs/common.yml
@@ -42,6 +42,7 @@ Services:
             Specializuji se na tvorbu **plně funkčních prototypů** od nuly až po
             ověření konceptu.
     action: Spojme se 🚀
+    # TODO: !!! Use Openmoji as emojis
 
 References:
     title: Reference
