--- a/locales/en/common.yml
+++ b/locales/en/common.yml
@@ -2,16 +2,13 @@ title: From 0 to 1
 
 Welcome:
     content: >
-        Virtual Reality *(VR)*, Augmented Reality *(AR)*, Extended Reality *(XR)*,
-        GraphQL, Progressive Web Apps *(PWA)*, Single-page Apps *(SPA)*,  Artificial
-        Intelligence *(AI)*, Machine Learning *(ML)*, Blockchain, Smart contracts,
-        Web3, Chatbots… 🤯
+        VR/AR/XR, GraphQL, Progressive Web Apps, AI, ML, Blockchain, Web3,... 🤯
 
 
         Are you realising the **full potential of technology in your business?**
 
 
-        With the ever-evolving landscape of **exponential Technologies**, it can be
+        With the ever-evolving landscape of **exponential technologies**, it can be
         challenging to keep up to date and use it to its potential in your business.
         However, by incorporating cutting-edge tools such as advanced browser APIs,
         Web Assembly *(WASM)*, using TypeScript, and benefiting from GPT when
