--- a/locales/cs/common.yml
+++ b/locales/cs/common.yml
@@ -1,4 +1,6 @@
-title: Tvořím **něco z ničeho** nic
+title: >
+    Tvořím
+    **něco z ničeho** nic
 Welcome:
     content: >
         VR/AR/XR, GraphQL, Progressive Web Apps, AI, ML, Blockchain, Web3,... 🤯
