--- a/locales/cs/common.yml
+++ b/locales/cs/common.yml
@@ -1,6 +1,11 @@
 title: >
     Tvořím
     **něco z ničeho** nic
+
+description: >
+    Specializuji se na tvorbu **plně funkčních prototypů** od nuly až po
+    ověření konceptu.
+
 Welcome:
     content: >
         VR/AR/XR, GraphQL, Progressive Web Apps, AI, ML, Blockchain, Web3,... 🤯
