--- a/locales/en/common.yml
+++ b/locales/en/common.yml
@@ -1,6 +1,10 @@
 title: >
     **From 0 to 1**
 
+description: >
+    I specialise in building **fully functional prototypes** from scratch to
+    proof of concept, staying ahead of the latest technologies.
+
 Welcome:
     content: >
         VR/AR/XR, GraphQL, Progressive Web Apps, AI, ML, Blockchain, Web3,... 🤯
