--- a/locales/en/common.yml
+++ b/locales/en/common.yml
@@ -1,6 +1,8 @@
 title: >
     **From 0 to 1**
 
+# Include "✒️ Co-founder of CollBoard.com 🚀 Startupper in Education 👨‍💻 Fullstack developer 🎟️ Organizer of tech events" somewhere
+
 description: >
     I specialise in building **fully functional prototypes** from scratch to
     proof of concept, staying ahead of the latest technologies.
