--- a/locales/cs/common.yml
+++ b/locales/cs/common.yml
@@ -9,26 +9,27 @@ description: >
 
 Welcome:
     content: >
-        Generative AI, ML, (Chat)GPT, LLM, Dalle, MidJourney, Stable diffusion, Sora,  VR/AR/XR, GraphQL,  Blockchain, Web3, PWAs... 🤯
+        Generativní umělá inteligence, AI/ML, (Chat)GPT, LLM, Dalle, MidJourney, Stable diffusion, Sora, VR/AR/XR, Typescript, Blockchain, Web3, PWAs... 🤯
 
 
         Využíváte **plný potenciál technologií a generativní umělé inteligence ve Vašem podnikání?**
 
 
 
-    technologie se neustále vyvíjí a momentálně zažívám mohutnou vlnu nástupu generativní umělé inteligence. je prakticky nemožné udržet si povědomí o všem co se děje a odfiltrovat klíčové technologie od šumu. S tím Vám rád pomohu.
+    Technologie se neustále vyvíjí a momentálně zažíváme mohutnou vlnu nástupu generativní umělé inteligence, která se čím dál tím víc podobá masivnímu nástupu osobních počítačů nebo začátkům internetu. Je téměř jisté, že prakticky každé odvětví lidské činnosti bude to auto revolucí ovlivněno, a také vzniknou vítězové i poražení této ohromné revoluce. Je prakticky nemožné udržet si povědomí o všem, co se na poli technologií děje a odfiltrovat klíčové technologie od denního šumu. S tím Vám rád pomohu.
+
     back-home: Zpět na hlavní stránku
 
 PavolHejny:
     title: Kdo jsem?
     content: >
-        Jsem Pavol, vývojář, který s nadšením využívá nové nástroje a technologie. momentálně se specializuji na tvorbu plně funkčních aplikací které využívají nejnovější modely umělé inteligence
+        Jsem Pavol, vývojář, který s nadšením využívá nové nástroje a technologie. Momentálně se specializuji na tvorbu plně funkčních uživatelských aplikací, které využívají nejnovější modely umělé inteligence. 
 
         jsem členem konzultační skupiny Ainautes, která pomáhat s nasazením generativního Ai po celém světě
 
-        zároveň pracuji na nástroje na generování webu Webgpt.cz před masivním nástupem generativní umělé inteligence jsem vytvořil první českou virtuální tabuli Collboard  a elektronické učebnice H-edu.
-        Pracoval jsem na mnoha vědeckých projektech České společnosti ornitologické. Přednášel
-        jsem na mnoha technologických a startupových konferencích + byl v porotě a
+        pracuji na WebGPT - nástroji na generování webů před masivním nástupem generativní umělé inteligence jsem vytvořil první českou virtuální tabuli Collboard a elektronické učebnice H-edu, které využívají desítky tisíc dětí. 
+        Také jsem Pracoval na mnoha vědeckých projektech České společnosti ornitologické. pravidelně Přednášim
+         na konferencích + v zasedám v porotě a
         mentorem mnoha českých i mezinárodních soutěží. k tomu jsem srdcem zvlášť a miluju Open Source mnoho z mých věcí najdete na mém Githubu. 
 
 Services:
@@ -37,7 +38,7 @@ Services:
     consult:
         title: Konzultace
         content: >
-            Nabízím odborné poradenství v oblasti různých technologií a poskytuji
+            Nabízím odborné poradenství v oblasti technologií pro vaši aplikaci a poskytuji
             analýzu jejich výhod a omezení, která vám pomůže při rozhodování.
     talk:
         title: Přednáška/ školení
