Handwritten title + web title

--- a/locales/cs/common.yml
+++ b/locales/cs/common.yml
@@ -1,7 +1,4 @@
-title: >
-    Tvořím
-
-    **něco z ničeho** nic
+title: Pavol Hejný 🖊 Tvořím něco z ničeho nic
 
 description: >
     Specializuji se na tvorbu **plně funkčních prototypů** od nuly až po
@@ -9,28 +6,36 @@ description: >
 
 Welcome:
     content: >
-        Generativní umělá inteligence, AI/ML, (Chat)GPT, LLM, Dalle, MidJourney, Stable diffusion, Sora, VR/AR/XR, Typescript, Blockchain, Web3, PWAs... 🤯
+        Generativní umělá inteligence, AI/ML, (Chat)GPT, LLM, Dalle, MidJourney,
+        Stable diffusion, Sora, VR/AR/XR, Typescript, Blockchain, Web3, PWAs... 🤯
 
+        Využíváte **plný potenciál technologií** a generativní umělé inteligence ve Vašem podnikání?
 
-        Využíváte **plný potenciál technologií a generativní umělé inteligence ve Vašem podnikání?**
+        Technologie se neustále vyvíjí a momentálně zažíváme mohutnou vlnu nástupu generativní umělé inteligence,
+        která se čím dál tím víc podobá masivnímu nástupu osobních počítačů nebo začátkům internetu.
 
+        Je téměř jisté, že prakticky každé odvětví lidské činnosti bude to auto revolucí ovlivněno,
+        a také vzniknou vítězové i poražení této ohromné revoluce.
 
-
-    Technologie se neustále vyvíjí a momentálně zažíváme mohutnou vlnu nástupu generativní umělé inteligence, která se čím dál tím víc podobá masivnímu nástupu osobních počítačů nebo začátkům internetu. Je téměř jisté, že prakticky každé odvětví lidské činnosti bude to auto revolucí ovlivněno, a také vzniknou vítězové i poražení této ohromné revoluce. Je prakticky nemožné udržet si povědomí o všem, co se na poli technologií děje a odfiltrovat klíčové technologie od denního šumu. S tím Vám rád pomohu.
+        Je prakticky nemožné udržet si povědomí o všem, co se na poli technologií děje a odfiltrovat klíčové technologie od denního šumu.
+        S tím vším Vám rád pomohu.
 
     back-home: Zpět na hlavní stránku
 
 PavolHejny:
     title: Kdo jsem?
     content: >
-        Jsem Pavol, vývojář, který s nadšením využívá nové nástroje a technologie. Momentálně se specializuji na tvorbu plně funkčních uživatelských aplikací, které využívají nejnovější modely umělé inteligence. 
+        Jsem Pavol, vývojář, který s nadšením využívá nové nástroje a technologie.
+        Momentálně se specializuji na tvorbu plně funkčních uživatelských aplikací, které využívají nejnovější modely umělé inteligence. 
 
         jsem členem konzultační skupiny Ainautes, která pomáhat s nasazením generativního Ai po celém světě
 
-        pracuji na WebGPT - nástroji na generování webů před masivním nástupem generativní umělé inteligence jsem vytvořil první českou virtuální tabuli Collboard a elektronické učebnice H-edu, které využívají desítky tisíc dětí. 
+        pracuji na WebGPT - nástroji na generování webů
+        před masivním nástupem generativní umělé inteligence jsem vytvořil první českou
+        virtuální tabuliCollboard a elektronické učebnice H-edu, které využívají desítky tisíc dětí. 
         Také jsem Pracoval na mnoha vědeckých projektech České společnosti ornitologické. pravidelně Přednášim
          na konferencích + v zasedám v porotě a
-        mentorem mnoha českých i mezinárodních soutěží. k tomu jsem srdcem zvlášť a miluju Open Source mnoho z mých věcí najdete na mém Githubu. 
+        mentorem mnoha českých i mezinárodních soutěží. k tomu jsem srdcem zvlášť a miluju Open Source mnoho z mých věcí najdete na mém Githubu.
 
 Services:
     title: Jak Vám pomohu?
