--- a/locales/en/common.yml
+++ b/locales/en/common.yml
@@ -1,5 +1,4 @@
-title: >
-    **From 0 to 1**
+title: Pavol Hejný 🖊 From 0 to 1
 
 description: >
     I specialise in building **fully functional prototypes** from scratch to
