Enhance cs bio and welcome

--- a/locales/cs/common.yml
+++ b/locales/cs/common.yml
@@ -6,19 +6,19 @@ description: >
 
 Welcome:
     content: >
-        Generativní umělá inteligence, AI/ML, (Chat)GPT, LLM, Dalle, MidJourney,
-        Stable diffusion, Sora, VR/AR/XR, Typescript, Blockchain, Web3, PWAs... 🤯
+        ChatGPT, GPT-4, Anthropic Claude, Gemini, AI, ML, (Chat)GPT, LLM, DALL-E, Midjourney,
+        Stable Diffusion, Sora, VR/AR/XR, TypeScript, blockchain, Web3, PWA... 🤯
 
-        Využíváte **plný potenciál technologií** a generativní umělé inteligence ve Vašem podnikání?
+        Využíváte **plný potenciál technologií** a generativní umělé inteligence ve vašem podnikání?
 
-        Technologie se neustále vyvíjí a momentálně zažíváme mohutnou vlnu nástupu generativní umělé inteligence,
-        která se čím dál tím víc podobá masivnímu nástupu osobních počítačů nebo začátkům internetu.
+        Technologie se neustále vyvíjí a momentálně zažíváme mohutnou vlnu nástupu **generativní umělé inteligence**,
+        která se čím dál více podobá masivnímu nástupu osobních počítačů nebo začátkům internetu.
 
-        Je téměř jisté, že prakticky každé odvětví lidské činnosti bude to auto revolucí ovlivněno,
-        a také vzniknou vítězové i poražení této ohromné revoluce.
+        Je téměř jisté, že prakticky každé odvětví lidské činnosti bude touto revolucí ovlivněno,
+        a také vzniknou vítězové i poražení této ohromné změny.
 
-        Je prakticky nemožné udržet si povědomí o všem, co se na poli technologií děje a odfiltrovat klíčové technologie od denního šumu.
-        S tím vším Vám rád pomohu.
+        Je prakticky nemožné udržet si povědomí o všem, co se na poli technologií děje, a odfiltrovat klíčové technologie od denního šumu.
+        **S tím vším vám rád pomohu.**
 
     back-home: Zpět na hlavní stránku
 
@@ -26,16 +26,19 @@ PavolHejny:
     title: Kdo jsem?
     content: >
         Jsem Pavol, vývojář, který s nadšením využívá nové nástroje a technologie.
-        Momentálně se specializuji na tvorbu plně funkčních uživatelských aplikací, které využívají nejnovější modely umělé inteligence. 
 
-        jsem členem konzultační skupiny Ainautes, která pomáhat s nasazením generativního Ai po celém světě
+        Momentálně se specializuji na tvorbu plně funkčních uživatelských aplikací, které využívají nejnovější modely umělé inteligence.
 
-        pracuji na WebGPT - nástroji na generování webů
-        před masivním nástupem generativní umělé inteligence jsem vytvořil první českou
-        virtuální tabuliCollboard a elektronické učebnice H-edu, které využívají desítky tisíc dětí. 
-        Také jsem Pracoval na mnoha vědeckých projektech České společnosti ornitologické. pravidelně Přednášim
-         na konferencích + v zasedám v porotě a
-        mentorem mnoha českých i mezinárodních soutěží. k tomu jsem srdcem zvlášť a miluju Open Source mnoho z mých věcí najdete na mém Githubu.
+        Jsem členem konzultační skupiny Ainautes, která pomáhá s nasazením generativního AI po celém světě.
+
+        Vyvíjím službu WebGPT na generování webových stránek.
+
+        Před masivním nástupem generativní umělé inteligence jsem vytvořil první českou virtuální tabuli Collboard a elektronické učebnice H-edu,
+        které využívají desítky tisíc dětí.
+
+        Také jsem pracoval na mnoha vědeckých projektech České společnosti ornitologické.
+        Pravidelně přednáším na konferencích, zasedám v porotě a jsem mentorem mnoha českých i mezinárodních soutěží.
+        K tomu jsem srdcem zvláště a miluji Open Source - mnoho z mých věcí najdete na mém Githubu.
 
 Services:
     title: Jak Vám pomohu?
