--- a/locales/cs/common.yml
+++ b/locales/cs/common.yml
@@ -38,7 +38,7 @@ PavolHejny:
 
         Také jsem pracoval na mnoha vědeckých projektech České společnosti ornitologické.
         Pravidelně přednáším na konferencích, zasedám v porotě a jsem mentorem mnoha českých i mezinárodních soutěží.
-        K tomu jsem srdcem zvláště a miluji Open Source - mnoho z mých věcí najdete na mém Githubu.
+        K tomu jsem srdcem zvláště a miluji **open source** - mnoho z mých věcí najdete na mém Githubu.
 
 Services:
     title: Jak Vám pomohu?
