--- a/locales/en/common.yml
+++ b/locales/en/common.yml
@@ -1,4 +1,4 @@
-title: Pavol Hejný 🖊 From 0 to 1
+title: Pavol Hejny 🖊 From 0 to 1
 
 description: >
     I specialise in building **fully functional prototypes** from scratch to
@@ -6,33 +6,38 @@ description: >
 
 Welcome:
     content: >
-        VR/AR/XR, GraphQL, Progressive Web Apps, AI, ML, Blockchain, Web3,... 🤯
+        ChatGPT, GPT-4, Anthropic Claude, Gemini, AI, ML, (Chat)GPT, LLM, DALL-E, Midjourney,
+        Stable Diffusion, Sora, VR/AR/XR, TypeScript, blockchain, Web3, PWA... 🤯
 
+        Are you leveraging the **full potential of technology** and generative AI in your business?
 
-        Are you realising the **full potential of technology in your business?**
+        Technology is constantly evolving and we are currently experiencing a massive wave of the emergence of **generative AI**,
+        which is becoming more and more like the massive rise of the personal computer or the early days of the internet.
 
+        It is almost certain that virtually every sector of human activity will be affected by this revolution,
+        and there will be winners and losers from this massive change.
 
-        With the ever-evolving landscape of **exponential technologies**, it can be
-        challenging to keep up to date and use it to its potential in your business.
-        However, by incorporating cutting-edge tools such as advanced browser APIs,
-        Web Assembly *(WASM)*, using TypeScript, and benefiting from GPT when
-        writing code, you can code, you can differentiate your business and achieve
-        new levels of efficiency, innovation and customer engagement. 🚀
+        It is virtually impossible to maintain an awareness of all that is happening in the field of technology and to filter out the key technologies from the daily noise.
+        **I'd be happy to help you with all of that.**
+
     back-home: Back home
 
 PavolHejny:
     title: Who I am?
     content: >
-        I'm Pavol, a developer and tech enthusiast who is passionate about exploring
-        cutting-edge tools and technologies. As a co-founder of H-edu and Collboard,
-        I'm invested in using digital innovation to transform education. I've
-        developed several citizen science projects, including the first mobile app
-        for birdwatchers in the Czech Republic, and spoken at tech and startup
-        conferences on topics such as VR, AR and AI. I also run Czech.events, a
-        platform that helps people find and attend technology and innovation events.
-        My talent for identifying growth opportunities and mentoring startups has
-        led me to win several innovation competitions. I'm committed to inspiring
-        others and believe that technology can help solve the world's problems.
+        I'm Pavol, a developer who is passionate about using new tools and technologies.
+
+        I specialise in creating fully functional user applications using the latest artificial intelligence models.
+
+        I am a member of the Ainautes consulting group, which supports with the deployment of generative AI around the world.
+
+        I develop the WebGPT web page generation service.
+
+        Before the massive emergence of generative AI, I created the first Czech virtual whiteboard, Collboard, and electronic textbooks, H-edu, which were used by tens of thousands of children.
+
+        I have also worked on many scientific projects for the Czech Ornithological Society.
+        I regularly give lectures at conferences, sit on juries, and act as a mentor in many Czech and international competitions.
+        I have a special heart for this, and I love **open source** - you can find many of my things on my GitHub.
 
 Services:
     title: How can I help you?
