Fix dash normalization and exclude specific URL addresses

--- a/locales/en/common.yml
+++ b/locales/en/common.yml
@@ -37,7 +37,7 @@ PavolHejny:
 
         I develop the WebGPT web page generation service.
 
-        Before the massive emergence of generative AI, I created the first Czech virtual whiteboard, Collboard, and electronic textbooks, H-edu, which were used by tens of thousands of children.
+        Before the massive emergence of generative AI, I have created the first Czech virtual whiteboard, Collboard, and electronic textbooks, H-edu, which were used by tens of thousands of children.
 
         I have also worked on many scientific projects for the Czech Ornithological Society.
         I regularly give lectures at conferences, sit on juries, and act as a mentor in many Czech and international competitions.
