--- a/locales/cs/common.yml
+++ b/locales/cs/common.yml
@@ -113,6 +113,9 @@ AiTraining:
             Vývoj pomocí AI
         price: 20 000,- Kč
         content: |
+            ať už **vyvíjíte cokoliv** a chcete svou efektivitu mnohonásobně **zvýšit pomocí Ai**
+
+
             zvyšte efektivitu vašeho vývoje pomocí ai co máte v ceně
 
             - dojedu k vám do kanceláře / firmy v rámci České republiky nebo online 
@@ -134,6 +137,7 @@ AiTraining:
             Vývoj AI aplikací
         price: 50 000,- Kč
         content: |
+            pokud vyvíjíte **Ai produkt** ať už jde o firemní chat
 
             tahle volba je pro vás ideální, Pokud sami vyvíjíte ai produkt. ať už jde o firemní chat automatizace zákaznické podpory generování reklamních příspěvků prezentací nebo čehokoliv nebo jakékoliv využití jazykových nebo obrázkových modelů pokud je vaše aplikace jen trochu složitá potřebujete nějakou rozumnou metodiku jak věci dobře integrovat dohromady sledovat jejich výkon testovat zda je všechno
 
@@ -145,8 +149,8 @@ AiTraining:
             -  a
             -  a
             -  a
-            -  a
-            -  a
+            -  týden předem s vámi na online kolo proberu co přesně řešíte a Pokud mi dáte přístupy ke svému kódu, dokážu se podívat na konkrétní detaily samozřejmě možnost podepsat nda
+            -  nejlépe rozumím webovým případně mobilním aplikacím psaným v typescriptu nebo javascriptu, Pokud však programujete v něčem jiném, není to z hlediska konzultace překážka, mám zkušenosti s dalšími jazyky avšak nejspíš vám v tom případě nedokážu pomoci v velmi odborných nejencích a detailech
             - a mnoho dalšího
 
             součástí tohoto celého je celý vývojářský den kde Vám Všechny změny věci ukážu Pak si můžeme sednout nad konkrétním kódem Já sám jsem primárně typescript vývoj
